<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_mh_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS2 support for the Motoman MH180-120.
    </p>
    <p>
      This package contains URDF configuration data, 3D models and launch files
      for the Motoman MH180-120.
    </p>
    <p>
      This is ported to ROS2 from the ROS-Industrial
      <a href="https://github.com/ros-industrial/motoman_experimental">motoman_experimental package</a>.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="https://cdn2.hubspot.net/hubfs/366775/Blog_Robots/MH180-120.pdf?t=1494345552355">
      Motoman MH180-120 product specification document</a>.
      All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
    <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/motoman_mh_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
